--- a/index.html
+++ b/index.html
@@ -1087,51 +1087,14 @@ h1, h2, .hero-title {
 <div id="panel-backdrop"></div>
 
 <!-- Выезжающая панель -->
-<div id="side-panel" class="open">
-  <button id="close-panel">×</button>
-
+<div id="side-panel">
+  <button id="close-panel">&times;</button>
+  
   <div class="side-content">
     <h2>¡Bienvenido!</h2>
-    <p>La construcción de un negocio hoy comienza con la construcción de una infraestructura digital.<br>
-    Y la infraestructura digital comienza con una marca.</p>
-
-    <p>Antes bastaba con una tarjeta de visita o una recomendación verbal.  
-    Hoy, todo comienza en una pantalla.  
-    En los primeros segundos. En la sensación que queda después de visitar tu web.</p>
-
-    <p>Hoy en día, un negocio no es solo un producto.  
-    Es un recorrido.  
-    Un camino por el que debe transitar el cliente: ver → entender → interesarse → confiar → pagar.</p>
-
-    <p>Para que ese camino sea rápido y sin obstáculos, hace falta estructura.  
-    Hace falta una infraestructura digital donde todo está alineado con intención y claridad.  
-    Donde el usuario no duda. Donde simplemente avanza.</p>
-
-    <p>Una página que funciona.  
-    Un embudo que guía.  
-    Un sistema de pago que simplemente funciona.  
-    Y un bot que lo explica todo por ti, claro y sin pausa.</p>
-
-    <p>La infraestructura digital no es solo tener una web.  
-    Es coherencia. Es estilo. Es velocidad. Es confianza.  
-    Es decir “somos fiables” sin decir una palabra — a través de los colores, el diseño y la experiencia.</p>
-
-    <p>Una marca no es un logo.  
-    Es lo que siente tu cliente después de verte.</p>
-
-    <p>Da nueva vida a tu negocio.  
-    Renueva tu lenguaje visual.  
-    Haz que tu marca hable por ti, no tú por ella.  
-    Deja que la interfaz venda.  
-    Deja que el sistema funcione.  
-    Deja que tu cliente se convenza solo — y compre.</p>
-
-    <p>El brillo digital no es una moda.  
-    Es la base de una venta fluida.  
-    Y del crecimiento real.</p>
+    <p>Aquí puedes descubrir más sobre nuestros servicios...</p>
   </div>
 </div>
-
 
 <!-- Modal: Contrato de Oferta Pública -->
 <!-- Modal: Contrato de Oferta Pública -->
