--- a/index.html
+++ b/index.html
@@ -1087,9 +1087,9 @@ h1, h2, .hero-title {
 <div id="panel-backdrop"></div>
 
 <!-- Выезжающая панель -->
-<div id="side-panel" class="open">
+<div id="side-panel">
   <button id="close-panel">&times;</button>
-
+  
   <div class="side-content">
     <h2>¡Bienvenido!</h2>
     <p>La construcción de un negocio hoy comienza con la construcción de una infraestructura digital.<br>
@@ -1131,7 +1131,6 @@ h1, h2, .hero-title {
     Y del crecimiento real.</p>
   </div>
 </div>
-
 
 <!-- Modal: Contrato de Oferta Pública -->
 <!-- Modal: Contrato de Oferta Pública -->
