--- a/index.html
+++ b/index.html
@@ -1112,6 +1112,10 @@ h1, h2, .hero-title {
     Un sistema de pago que simplemente funciona.  
     Y un bot que lo explica todo por ti, claro y sin pausa.</p>
 
+    <p><strong>Nos encargamos de integrar todos los métodos de pago disponibles para tu sector:</strong> tarjeta, PayPal, Bizum, transferencia, pagos recurrentes u otros — según lo que tu negocio necesite.</p>
+
+    <p><strong>Además, utilizamos canales publicitarios actuales como Meta Ads (Facebook e Instagram) y Google Ads</strong> para dirigir tráfico constante y cualificado directamente hacia tu landing.</p>
+
     <p>La infraestructura digital no es solo tener una web.  
     Es coherencia. Es estilo. Es velocidad. Es confianza.  
     Es decir “somos fiables” sin decir una palabra — a través de los colores, el diseño y la experiencia.</p>
