--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,18 @@ h1, h2, .hero-title {
     Un sistema de pago que simplemente funciona.  
     Y un bot que lo explica todo por ti, claro y sin pausa.</p>
 
-    <p><strong>Nos encargamos de integrar todos los métodos de pago disponibles para tu sector:</strong> tarjeta, PayPal, Bizum, transferencia, pagos recurrentes u otros — según lo que tu negocio necesite.</p>
+    <div style="background: #f3f4f6; border-left: 4px solid #10b981; padding: 1rem; margin: 1.5rem 0;">
+      <strong>✅ Métodos de pago integrados para tu sector:</strong>
+      <ul style="margin-top: 0.5rem; list-style: disc; padding-left: 1.5rem;">
+        <li>Tarjeta bancaria (Stripe, Redsys, etc.)</li>
+        <li>PayPal</li>
+        <li>Bizum</li>
+        <li>Transferencia bancaria</li>
+        <li>Pagos recurrentes / suscripciones</li>
+        <li><strong>Criptomonedas (Bitcoin, USDT, Ethereum...)</strong></li>
+      </ul>
+      <p style="margin-top: 0.75rem;">Adaptamos las pasarelas según el perfil de tu cliente y el país donde operas.</p>
+    </div>
 
     <p><strong>Además, utilizamos canales publicitarios actuales como Meta Ads (Facebook e Instagram) y Google Ads</strong> para dirigir tráfico constante y cualificado directamente hacia tu landing.</p>
 
