--- a/index.html
+++ b/index.html
@@ -1091,8 +1091,9 @@ h1, h2, .hero-title {
   <button id="close-panel">&times;</button>
   
   <div class="side-content">
-    <h2>¡Bienvenido!</h2>
-    <p>La construcción de un negocio hoy comienza con la construcción de una infraestructura digital.<br>
+     <h2>BIEVENIDO</h2>
+
+    <p>La construcción de un negocio hoy comienza con la construcción de una infraestructura digital.  
     Y la infraestructura digital comienza con una marca.</p>
 
     <p>Antes bastaba con una tarjeta de visita o una recomendación verbal.  
@@ -1112,24 +1113,20 @@ h1, h2, .hero-title {
     Un sistema de pago que simplemente funciona.  
     Y un bot que lo explica todo por ti, claro y sin pausa.</p>
 
-    <div style="background: #f3f4f6; border-left: 4px solid #10b981; padding: 1rem; margin: 1.5rem 0;">
-      <strong>✅ Métodos de pago integrados para tu sector:</strong>
-      <ul style="margin-top: 0.5rem; list-style: disc; padding-left: 1.5rem;">
-        <li>Tarjeta bancaria (Stripe, Redsys, etc.)</li>
-        <li>PayPal</li>
-        <li>Bizum</li>
-        <li>Transferencia bancaria</li>
-        <li>Pagos recurrentes / suscripciones</li>
-        <li><strong>Criptomonedas (Bitcoin, USDT, Ethereum...)</strong></li>
-      </ul>
-      <p style="margin-top: 0.75rem;">Adaptamos las pasarelas según el perfil de tu cliente y el país donde operas.</p>
-    </div>
+    <p><strong>Métodos de pago disponibles:</strong><br>
+    Tarjeta bancaria (Visa, Mastercard, Stripe, Redsys),  
+    PayPal,  
+    Bizum,  
+    transferencia bancaria,  
+    pagos recurrentes o por suscripción,  
+    pago contra reembolso (en ciertos casos),  
+    y criptomonedas (Bitcoin, USDT, Ethereum y más).</p>
 
-    <p><strong>Además, utilizamos canales publicitarios actuales como Meta Ads (Facebook e Instagram) y Google Ads</strong> para dirigir tráfico constante y cualificado directamente hacia tu landing.</p>
+    <p>También utilizamos canales publicitarios como Meta Ads (Facebook e Instagram) y Google Ads para generar tráfico constante y cualificado hacia tu página.</p>
 
     <p>La infraestructura digital no es solo tener una web.  
     Es coherencia. Es estilo. Es velocidad. Es confianza.  
-    Es decir “somos fiables” sin decir una palabra — a través de los colores, el diseño y la experiencia.</p>
+    Es decir “somos fiables” sin decir una palabra, a través de los colores, el diseño y la experiencia.</p>
 
     <p>Una marca no es un logo.  
     Es lo que siente tu cliente después de verte.</p>
@@ -1139,11 +1136,11 @@ h1, h2, .hero-title {
     Haz que tu marca hable por ti, no tú por ella.  
     Deja que la interfaz venda.  
     Deja que el sistema funcione.  
-    Deja que tu cliente se convenza solo — y compre.</p>
+    Deja que tu cliente se convenza solo, y compre.</p>
 
     <p>El brillo digital no es una moda.  
-    Es la base de una venta fluida.  
-    Y del crecimiento real.</p>
+    Es la base de una venta fluida  
+    y del crecimiento real.</p>
   </div>
 </div>
 
