--- a/index.html
+++ b/index.html
@@ -1141,6 +1141,7 @@ h1, h2, .hero-title {
     <p>El brillo digital no es una moda.  
     Es la base de una venta fluida  
     y del crecimiento real.</p>
+    <p><strong>¡Dale! Vamos a hablar de tu negocio.</strong></p>
   </div>
 </div>
 
