--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,10 @@ h1, h2, .hero-title {
     <p>El brillo digital no es una moda.  
     Es la base de una venta fluida  
     y del crecimiento real.</p>
-    <p><strong>¡Dale! Vamos a hablar de tu negocio.</strong></p>
+    <p style="font-size: 1.1rem; font-weight: bold; margin-bottom: 1em;">
+  ¡Dale! Vamos a hablar de tu negocio.
+</p>
+
   </div>
 </div>
 
