--- a/index.html
+++ b/index.html
@@ -824,6 +824,65 @@ h1, h2, .hero-title {
   margin-top: 0.1rem;   /* расстояние между строками */
 }
 
+.custom-checkbox-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  margin-top: 1em;
+}
+
+.custom-checkbox {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-family: 'Lato', sans-serif;
+  font-size: 0.9rem;
+  user-select: none;
+  position: relative;
+  padding-left: 30px;
+}
+
+.custom-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.custom-checkbox .checkmark {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 20px;
+  width: 20px;
+  background-color: white;
+  border: 2px solid #999;
+  border-radius: 50%;
+  transition: all 0.2s ease;
+}
+
+.custom-checkbox input:checked ~ .checkmark {
+  background-color: #111;
+  border-color: #111;
+}
+
+.custom-checkbox .checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.custom-checkbox input:checked ~ .checkmark::after {
+  display: block;
+}
+
+.custom-checkbox .checkmark::after {
+  left: 6px;
+  top: 6px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
 
 
 
@@ -1144,6 +1203,41 @@ h1, h2, .hero-title {
     <p style="font-size: 1.1rem; font-weight: bold; margin-bottom: 1em;">
   ¡Dale! Vamos a hablar de tu negocio.
 </p>
+<p style="font-weight: bold; margin-top: 2em;">¿Qué tipo de negocio tienes?</p>
+<div class="custom-checkbox-group">
+
+  <label class="custom-checkbox">
+    Restaurante
+    <input type="checkbox" name="tipo-negocio" value="restaurante">
+    <span class="checkmark"></span>
+  </label>
+
+  <label class="custom-checkbox">
+    Hotel / Alojamiento
+    <input type="checkbox" name="tipo-negocio" value="hotel">
+    <span class="checkmark"></span>
+  </label>
+
+  <label class="custom-checkbox">
+    Gimnasio / Fitness
+    <input type="checkbox" name="tipo-negocio" value="gym">
+    <span class="checkmark"></span>
+  </label>
+
+  <label class="custom-checkbox">
+    Cafetería / Bar
+    <input type="checkbox" name="tipo-negocio" value="cafe">
+    <span class="checkmark"></span>
+  </label>
+
+  <label class="custom-checkbox">
+    Comercio / Tienda
+    <input type="checkbox" name="tipo-negocio" value="comercio">
+    <span class="checkmark"></span>
+  </label>
+
+</div>
+
 
   </div>
 </div>
