--- a/index.html
+++ b/index.html
@@ -1235,6 +1235,11 @@ h1, h2, .hero-title {
     <input type="checkbox" name="tipo-negocio" value="comercio">
     <span class="checkmark"></span>
   </label>
+<h3>¿Tienes una identidad de marca clara?</h3>
+<label><input type="radio" name="branding"> No, solo tengo el nombre</label>
+<label><input type="radio" name="branding"> Sí, pero es muy básico</label>
+<label><input type="radio" name="branding"> Tengo un logo, pero no una identidad visual</label>
+<label><input type="radio" name="branding"> Sí, ya tengo una marca bien desarrollada</label>
 
 </div>
 
