--- a/index.html
+++ b/index.html
@@ -1274,11 +1274,15 @@ h1, h2, .hero-title {
     <input type="checkbox" name="tipo-negocio" value="comercio">
     <span class="checkmark"></span>
   </label>
-<h3>¿Tienes una identidad de marca clara?</h3>
-<label><input type="radio" name="branding"> No, solo tengo el nombre</label>
-<label><input type="radio" name="branding"> Sí, pero es muy básico</label>
-<label><input type="radio" name="branding"> Tengo un logo, pero no una identidad visual</label>
-<label><input type="radio" name="branding"> Sí, ya tengo una marca bien desarrollada</label>
+<h3>¿Qué formas de pago te gustaría ofrecer?</h3>
+<div class="form-grid four-cols">
+  <label><input type="checkbox"> Tarjeta bancaria</label>
+  <label><input type="checkbox"> Bizum</label>
+  <label><input type="checkbox"> PayPal</label>
+  <label><input type="checkbox"> Transferencia</label>
+  <label><input type="checkbox"> Criptomonedas</label>
+</div>
+
 
 </div>
 
