--- a/index.html
+++ b/index.html
@@ -1242,38 +1242,16 @@ h1, h2, .hero-title {
     <p style="font-size: 1.1rem; font-weight: bold; margin-bottom: 1em;">
   ¡Dale! Vamos a hablar de tu negocio.
 </p>
-<p style="font-weight: bold; margin-top: 2em;">¿Qué tipo de negocio tienes?</p>
-<div class="custom-checkbox-group">
+<h3>¿Qué tipo de negocio tienes?</h3>
+<div class="form-grid four-cols">
+  <label><input type="checkbox" name="tipo-negocio" value="restaurante"> Restaurante</label>
+  <label><input type="checkbox" name="tipo-negocio" value="hotel"> Hotel / Alojamiento</label>
+  <label><input type="checkbox" name="tipo-negocio" value="gimnasio"> Gimnasio / Fitness</label>
+  <label><input type="checkbox" name="tipo-negocio" value="cafeteria"> Cafetería / Bar</label>
+  <label><input type="checkbox" name="tipo-negocio" value="comercio"> Comercio / Tienda</label>
+  <label><input type="checkbox" name="tipo-negocio" value="otros"> Otro</label>
+</div>
 
-  <label class="custom-checkbox">
-    Restaurante
-    <input type="checkbox" name="tipo-negocio" value="restaurante">
-    <span class="checkmark"></span>
-  </label>
-
-  <label class="custom-checkbox">
-    Hotel / Alojamiento
-    <input type="checkbox" name="tipo-negocio" value="hotel">
-    <span class="checkmark"></span>
-  </label>
-
-  <label class="custom-checkbox">
-    Gimnasio / Fitness
-    <input type="checkbox" name="tipo-negocio" value="gym">
-    <span class="checkmark"></span>
-  </label>
-
-  <label class="custom-checkbox">
-    Cafetería / Bar
-    <input type="checkbox" name="tipo-negocio" value="cafe">
-    <span class="checkmark"></span>
-  </label>
-
-  <label class="custom-checkbox">
-    Comercio / Tienda
-    <input type="checkbox" name="tipo-negocio" value="comercio">
-    <span class="checkmark"></span>
-  </label>
 <h3>¿Qué formas de pago te gustaría ofrecer?</h3>
 <div class="form-grid four-cols">
   <label><input type="checkbox"> Tarjeta bancaria</label>
