--- a/index.html
+++ b/index.html
@@ -378,16 +378,16 @@ h1, h2, .hero-title {
 #side-panel {
   position: fixed;
   top: 0;
-  right: -50%;
-  width: 50%;
-  height: 100%;
-  background-color: white;
-  color: black;
-  z-index: 1001;
-  transition: right 0.4s ease;
-  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.3);
-  padding: 20px;
+  right: 0;
+  width: 100%;
+  max-width: 400px; /* или сколько тебе нужно */
+  height: 100vh;
+  background: white;
+  box-shadow: -2px 0 10px rgba(0,0,0,0.1);
+  overflow: hidden;
+  z-index: 1000;
 }
+
 
 #side-panel.open {
   right: 0;
@@ -422,9 +422,12 @@ h1, h2, .hero-title {
 
 
 .side-content {
-  margin-top: 60px;
-  font-family: 'Roboto', sans-serif;
+  overflow-y: auto;
+  max-height: 100vh;
+  padding: 20px;
+  box-sizing: border-box;
 }
+
 
 #side-panel {
   position: fixed;
