--- a/index.html
+++ b/index.html
@@ -422,12 +422,9 @@ h1, h2, .hero-title {
 
 
 .side-content {
-  overflow-y: auto;
-  max-height: 100vh;
-  padding: 20px;
-  box-sizing: border-box;
+  margin-top: 60px;
+  font-family: 'Roboto', sans-serif;
 }
-
 
 #side-panel {
   position: fixed;
