--- a/index.html
+++ b/index.html
@@ -408,23 +408,33 @@ h1, h2, .hero-title {
 
 
 .side-content {
-  margin-top: 60px;
-  font-family: 'Roboto', sans-serif;
+  height: 100%;
+  overflow-y: auto;        /* ← вертикальная прокрутка включена */
+  overflow-x: hidden;      /* ← горизонтальная прокрутка отключена */
+  padding: 20px;
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch; /* плавная прокрутка на iOS */
 }
 
 #side-panel {
   position: fixed;
   top: 0;
-  right: -50%;
-  width: 50%;
-  height: 100%;
-  background-color: white;
-  color: black;
-  z-index: 1001;
-  transition: right 0.4s ease;
-  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.3);
-  padding: 20px;
+  right: 0;
+  width: 100%;
+  max-width: 400px;
+  height: 100vh;
+  background: white;
+  z-index: 9999;
+  overflow: hidden; /* предотвращаем прокрутку всего блока */
+  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
 }
+
+
+body.modal-open {
+  overflow: hidden;
+  position: relative;
+}
+
 
 #side-panel.open {
   right: 0;
@@ -1542,6 +1552,11 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 
+// при открытии панели
+document.body.classList.add("modal-open");
+
+// при закрытии панели
+document.body.classList.remove("modal-open");
 
 
 
