--- a/index.html
+++ b/index.html
@@ -895,10 +895,10 @@ h1, h2, .hero-title {
 .form-grid label {
   display: flex;
   align-items: center;
-  gap: 0.2em;
-  margin-bottom: 0.2em; /* было 0.5em или 1em — уменьшаем */
+  gap: 0.5em;
+  margin-bottom: 0.3em; /* было 0.5em или 1em — уменьшаем */
   padding: 0.5em 0.75em; /* можно немного сократить внутренний отступ */
- 
+  padding: 0.75em 1em;
   background: #f9f9f9;
   border-radius: 8px;
   font-family: 'Lato', sans-serif;
