--- a/index.html
+++ b/index.html
@@ -991,6 +991,30 @@ body.modal-open {
   cursor: pointer;
 }
 
+.progress-container {
+  width: 100%;
+  height: 12px;
+  background: #eee;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.progress-bar {
+  height: 100%;
+  width: 0%;
+  background: #f35ca3;
+  transition: width 0.3s ease;
+}
+
+#progress-text {
+  font-size: 14px;
+  margin-bottom: 20px;
+  font-family: 'Lato', sans-serif;
+  text-align: right;
+}
+
+
 
 
   </style>
@@ -1308,6 +1332,11 @@ body.modal-open {
   ¡Dale! Vamos a hablar de tu negocio.
 </p>
 <h3>¿Qué tipo de negocio tienes?</h3>
+<div class="progress-container">
+  <div class="progress-bar" id="progress-bar"></div>
+</div>
+<p id="progress-text">0% completado</p>
+
 <div class="form-grid four-cols">
   <label><input type="checkbox" name="tipo-negocio" value="restaurante"> Restaurante</label>
   <label><input type="checkbox" name="tipo-negocio" value="hotel"> Hotel / Alojamiento</label>
@@ -1620,6 +1649,24 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 
+function updateProgress() {
+  const checkboxes = document.querySelectorAll('.form-grid input[type="checkbox"]');
+  const checked = Array.from(checkboxes).filter(cb => cb.checked).length;
+  const total = checkboxes.length;
+
+  const percent = total > 0 ? Math.round((checked / total) * 100) : 0;
+
+  document.getElementById('progress-bar').style.width = `${percent}%`;
+  document.getElementById('progress-text').textContent = `${percent}% completado`;
+}
+
+// вызывать при загрузке и при каждом клике
+document.addEventListener("DOMContentLoaded", () => {
+  updateProgress();
+  document.querySelectorAll('.form-grid input[type="checkbox"]').forEach(cb => {
+    cb.addEventListener('change', updateProgress);
+  });
+});
 
 
 
