--- a/index.html
+++ b/index.html
@@ -1335,8 +1335,10 @@ body.modal-open {
   <div class="progress-bar" id="progress-bar"></div>
 </div>
 <p id="progress-text">0% completado</p>
-<h3>¿Qué tipo de negocio tienes?</h3>
 
+<div class="form-section"></div>
+<h3>¿Qué tipo de negocio tienes?</h3>
+</div>
 
 <div class="form-grid four-cols">
   <label><input type="checkbox" name="tipo-negocio" value="restaurante"> Restaurante</label>
@@ -1347,7 +1349,9 @@ body.modal-open {
   <label><input type="checkbox" name="tipo-negocio" value="otros"> Otro</label>
 </div>
 
+<div class="form-section"></div>
 <h3>¿Qué formas de pago te gustaría ofrecer?</h3>
+</div>
 <div class="form-grid four-cols">
   <label><input type="checkbox"> Tarjeta bancaria</label>
   <label><input type="checkbox"> Bizum</label>
@@ -1650,24 +1654,30 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 
-function updateProgress() {
-  const checkboxes = document.querySelectorAll('.form-grid input[type="checkbox"]');
-  const checked = Array.from(checkboxes).filter(cb => cb.checked).length;
-  const total = checkboxes.length;
+function updateStepProgress() {
+  const sections = document.querySelectorAll('.form-section');
+  let completed = 0;
 
-  const percent = total > 0 ? Math.round((checked / total) * 100) : 0;
+  sections.forEach(section => {
+    const checked = section.querySelectorAll('input[type="checkbox"]:checked').length;
+    if (checked > 0) completed++;
+  });
+
+  const percent = Math.round((completed / sections.length) * 100);
 
   document.getElementById('progress-bar').style.width = `${percent}%`;
   document.getElementById('progress-text').textContent = `${percent}% completado`;
 }
 
-// вызывать при загрузке и при каждом клике
+// запуск при загрузке и при изменении
 document.addEventListener("DOMContentLoaded", () => {
-  updateProgress();
-  document.querySelectorAll('.form-grid input[type="checkbox"]').forEach(cb => {
-    cb.addEventListener('change', updateProgress);
+  updateStepProgress();
+
+  document.querySelectorAll('.form-section input[type="checkbox"]').forEach(cb => {
+    cb.addEventListener('change', updateStepProgress);
   });
 });
+
 
 
 
