--- a/index.html
+++ b/index.html
@@ -1654,30 +1654,24 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 
-function updateStepProgress() {
-  const sections = document.querySelectorAll('.form-section');
-  let completed = 0;
+function updateProgress() {
+  const checkboxes = document.querySelectorAll('.form-grid input[type="checkbox"]');
+  const checked = Array.from(checkboxes).filter(cb => cb.checked).length;
+  const total = checkboxes.length;
 
-  sections.forEach(section => {
-    const checked = section.querySelectorAll('input[type="checkbox"]:checked').length;
-    if (checked > 0) completed++;
-  });
-
-  const percent = Math.round((completed / sections.length) * 100);
+  const percent = total > 0 ? Math.round((checked / total) * 100) : 0;
 
   document.getElementById('progress-bar').style.width = `${percent}%`;
   document.getElementById('progress-text').textContent = `${percent}% completado`;
 }
 
-// запуск при загрузке и при изменении
+// вызывать при загрузке и при каждом клике
 document.addEventListener("DOMContentLoaded", () => {
-  updateStepProgress();
-
-  document.querySelectorAll('.form-section input[type="checkbox"]').forEach(cb => {
-    cb.addEventListener('change', updateStepProgress);
+  updateProgress();
+  document.querySelectorAll('.form-grid input[type="checkbox"]').forEach(cb => {
+    cb.addEventListener('change', updateProgress);
   });
 });
-
 
 
 
