--- a/index.html
+++ b/index.html
@@ -1349,7 +1349,7 @@ body.modal-open {
   <label><input type="checkbox" name="tipo-negocio" value="otros"> Otro</label>
 </div>
 
-<div class="form-section"></div>
+<div class="form-section">
 <h3>¿Qué formas de pago te gustaría ofrecer?</h3>
 </div>
 <div class="form-grid four-cols">
