--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ section#hero {
       border-radius: 8px;
     }
     .form-section {
-      background: #fff0fa;
+      background: transparent;
       color: #222;
       padding: 40px 20px;
       text-align: center;
