--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ section#hero {
     .form-section {
       background: transparent;
       color: #222;
-      padding: 40px 20px;
-      text-align: center;
+      padding: 20px 20px;
+      text-align: left;
     }
     form input, form textarea {
       display: block;
