--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,7 @@ body.modal-open {
   <button id="close-panel">&times;</button>
   
   <div class="side-content">
-     <h2>BIEVENIDO</h2>
+     <2h>BIEVENIDO</h2>
 
     <p>La construcción de un negocio hoy comienza con la construcción de una infraestructura digital.  
     Y la infraestructura digital comienza con una marca.</p>
@@ -1329,7 +1329,7 @@ body.modal-open {
     <p>El brillo digital no es una moda.  
     Es la base de una venta fluida  
     y del crecimiento real.</p>
-    <p style="font-size: 1.1rem; font-weight: bold; margin-bottom: 1em;">
+    <p style="font-size: 0.5rem; font-weight: bold; margin-bottom: 1em;">
   ¡Dale! Vamos a hablar de tu negocio.
 </p>
 <!-- Прогресс -->
