--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,7 @@ body.modal-open {
   <button id="close-panel">&times;</button>
   
   <div class="side-content">
-     <2h>BIEVENIDO</h2>
+     <h2>BIEVENIDO</h2>
 
     <p>La construcción de un negocio hoy comienza con la construcción de una infraestructura digital.  
     Y la infraestructura digital comienza con una marca.</p>
