--- a/index.html
+++ b/index.html
@@ -1347,8 +1347,20 @@ body.modal-open {
     <label><input type="checkbox" name="negocio" value="gimnasio"> Gimnasio</label>
     <label><input type="checkbox" name="negocio" value="cafe"> Café</label>
     <label><input type="checkbox" name="negocio" value="tienda"> Comercio</label>
+    <label><input type="checkbox" name="negocio" value="peluqueria"> Peluquería</label>
+    <label><input type="checkbox" name="negocio" value="lavanderia"> Lavandería</label>
+    <label><input type="checkbox" name="negocio" value="clinica"> Clínica / Salud</label>
+    <label><input type="checkbox" name="negocio" value="agencia"> Agencia creativa</label>
+    <label><input type="checkbox" name="negocio" value="online"> Tienda online</label>
+    <label>
+      <input type="checkbox" id="otroCheckbox" name="negocio" value="otro"> Otro
+    </label>
+    <div id="otroInputWrapper" style="display:none; margin-top: 10px;">
+      <input type="text" name="negocio_otro" placeholder="Especifica tu negocio" style="width: 100%; padding: 10px; border-radius: 6px; border: 1px solid #ccc;">
+    </div>
   </div>
 </div>
+
 
 <!-- Секция 2 -->
 <div class="form-section">
