--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@ section#hero {
     body {
       scroll-snap-type: y mandatory;
     }
+
+    body {
+  background-color: #ffffff !important;
+  color: #000000 !important;
+}
+
     .spacer {
       height: 20vh;
     }
