--- a/index.html
+++ b/index.html
@@ -1335,14 +1335,16 @@ body.modal-open {
     <p>El brillo digital no es una moda.  
     Es la base de una venta fluida  
     y del crecimiento real.</p>
-    <h2>
-  ¡Dale! Vamos a hablar de tu negocio.
-</h2>
-<!-- Прогресс -->
-<div class="progress-container">
-  <div class="progress-bar" id="progress-bar"></div>
+    <div class="sticky-header">
+  <div class="form-intro">
+    <h2>¡Dale! Vamos a hablar de tu negocio.</h2>
+  </div>
+  <div class="progress-container">
+    <div class="progress-bar" id="progress-bar"></div>
+    <div class="progress-text" id="progress-text">0% completado</div>
+  </div>
 </div>
-<p id="progress-text">0% completado</p>
+
 
 <!-- Секция 1 -->
 <div class="form-section">
