--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@ body.modal-open {
   background: white;
   z-index: 10;
   padding: 16px 20px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+  box-shadow: none; /* убираем тень */
 }
 
 
