--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,8 @@ body.modal-open {
 }
 .sticky-header {
   position: sticky;
-  top: 0;
+  margin-top: 0 !important;
+    top: 0;
   background: white;
   z-index: 10;
   padding: 16px 20px;
