--- a/index.html
+++ b/index.html
@@ -1016,12 +1016,15 @@ body.modal-open {
   background: #f35ca3;
   transition: width 0.3s ease;
 }
-#progress-text {
-  font-size: 14px;
-  margin-bottom: 20px;
-  font-family: 'Lato', sans-serif;
+.progress-text {
+  font-size: 0.8rem;
   text-align: right;
+  padding: 4px 8px;
+  color: #222;
+  display: block;
+  margin-top: 5px;
 }
+
 
 
 
@@ -1047,13 +1050,7 @@ body.modal-open {
   transition: width 0.3s ease;
 }
 
-.progress-text {
-  font-size: 0.8rem;
-  text-align: right;
-  padding: 4px 8px;
-  display: block !important; /* ← на всякий случай */
-  color: #222;
-}
+
 
 
 .form-wrapper {
