--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ body.modal-open {
   transition: right 0.4s ease;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.3);
   display: flex;
-  flex-direction: column;
+  flex-direction: column;progress-container
   overflow: hidden;
 }
 
@@ -1041,12 +1041,7 @@ body.modal-open {
 }
 
 
-.progress-bar {
-  height: 10px;
-  width: 0%;
-  background: #f35ca3;
-  transition: width 0.3s ease;
-}
+
 
 
 
