--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,12 @@ body.modal-open {
 }
 
 
-
+.progress-bar {
+  height: 10px;
+  width: 0%;
+  background: #f35ca3;
+  transition: width 0.3s ease;
+}
 
 
 
