--- a/index.html
+++ b/index.html
@@ -1041,10 +1041,11 @@ body.modal-open {
 }
 
 
-.progress-bar {
+ {
   height: 10px;
-  width: 0%;
-  background: #f35ca3;
+  widt.progress-barh: 0%;
+  background: linear-gradient(90deg, #f35ca3, #a86bff);
+
   transition: width 0.3s ease;
 }
 
