--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,8 @@ body.modal-open {
 .progress-bar {
   height: 100%;
   width: 0%;
-  background: #f35ca3;
+  background: linear-gradient(90deg, #66ccff, #f35ca3);
+
   transition: width 0.3s ease;
 }
 .progress-text {
@@ -1044,8 +1045,7 @@ body.modal-open {
  {
   height: 10px;
   widt.progress-barh: 0%;
-  background: linear-gradient(90deg, #f35ca3, #a86bff);
-
+  background: linear-gradient(90deg, #66ccff, #f35ca3);
   transition: width 0.3s ease;
 }
 
