--- a/index.html
+++ b/index.html
@@ -1007,9 +1007,9 @@ body.modal-open {
   height: 100%;
   width: 0%;
   background: linear-gradient(90deg, #66ccff, #f35ca3);
-
   transition: width 0.3s ease;
 }
+
 .progress-text {
   font-size: 0.8rem;
   text-align: right;
@@ -1066,6 +1066,12 @@ body.modal-open {
   
 }
 
+.progress-container {
+  height: 12px;
+  background: #eee;
+  border-radius: 6px;
+  overflow: hidden;
+}
 
 
   </style>
