--- a/index.html
+++ b/index.html
@@ -1067,6 +1067,7 @@ body.modal-open {
 }
 
 .progress-container {
+  position: relative;
   height: 12px;
   background: #eee;
   border-radius: 6px;
