--- a/index.html
+++ b/index.html
@@ -1029,14 +1029,13 @@ body.modal-open {
 
 .progress-text {
   position: absolute;
-  bottom: -18px; /* немного ниже полосы */
+  bottom: -20px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 0.7rem;
-  color: #555;
-  z-index: 2;
-  font-family: 'Lato', sans-serif;
+  font-size: 0.75rem;
+  color: #444;
   text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
 }
 
 
@@ -1066,8 +1065,8 @@ body.modal-open {
 }
 
 .progress-container {
-  margin-top: 10px;
-  margin-bottom: 24px;
+  position: relative;
+  margin-bottom: 28px;
 }
 
 
