--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,7 @@ body.modal-open {
   height: 100%;
   width: 0%;
   background: linear-gradient(90deg, #66ccff, #f35ca3);
+  opacity: 20%;
   transition: width 0.3s ease;
   z-index: 1; /* позади текста */
 }
@@ -1029,13 +1030,14 @@ body.modal-open {
 
 .progress-text {
   position: absolute;
-  bottom: -20px;
+  bottom: -18px; /* немного ниже полосы */
   left: 50%;
   transform: translateX(-50%);
-  font-size: 0.75rem;
-  color: #444;
-  text-transform: uppercase;
+  font-size: 0.7rem;
+  color: #555;
+  z-index: 2;
   font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
 }
 
 
