--- a/index.html
+++ b/index.html
@@ -1067,9 +1067,11 @@ body.modal-open {
 
 .progress-container {
   position: relative;
-  margin-bottom: 28px;
+  height: 12px;
+  background: #eee;
+  border-radius: 6px;
+  overflow: hidden;
 }
-
 
 
   </style>
