--- a/index.html
+++ b/index.html
@@ -1027,17 +1027,7 @@ body.modal-open {
   color: #222;
 }
 
-.progress-text {
-  position: absolute;
-  bottom: -18px; /* немного ниже полосы */
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 0.7rem;
-  color: #555;
-  z-index: 2;
-  font-family: 'Lato', sans-serif;
-  text-transform: uppercase;
-}
+
 
 
 
@@ -1065,12 +1055,23 @@ body.modal-open {
   
 }
 
+.progress-text {
+  position: absolute;
+  bottom: -18px; /* немного ниже полосы */
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 0.7rem;
+  color: #555;
+  z-index: 2;
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+}
+
+
+
 .progress-container {
   position: relative;
-  height: 12px;
-  background: #eee;
-  border-radius: 6px;
-  overflow: hidden;
+  margin-bottom: 10px;
 }
 
 
