--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,9 @@ body.modal-open {
 .progress-container {
   position: relative;
   margin-bottom: 10px;
+  height: 12px; /* 👈 ДОБАВЬ ЭТО */
 }
+
 
 
   </style>
