--- a/index.html
+++ b/index.html
@@ -1392,11 +1392,13 @@ body.modal-open {
   <div class="form-intro">
     <h2>¡Dale! Vamos a hablar de tu negocio.</h2>
   </div>
+  <div class="progress-wrapper">
+  <div class="progress-text" id="progress-text">0% completado</div>
   <div class="progress-container">
     <div class="progress-bar" id="progress-bar"></div>
-    <div class="progress-text" id="progress-text">0% completado</div>
   </div>
 </div>
+
 
 
 <!-- Секция 1 -->
