--- a/index.html
+++ b/index.html
@@ -1406,10 +1406,9 @@ body.modal-open {
     <h2>¡Dale! Vamos a hablar de tu negocio.</h2>
   </div>
   <div class="progress-wrapper">
- 
+  <div class="progress-text" id="progress-text">0% completado</div>
   <div class="progress-container">
     <div class="progress-bar" id="progress-bar"></div>
-    
   </div>
 </div>
 
